# freqtrade

./: .coveragerc  .deepsource.toml  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pyup.yml  .readthedocs.yml  .travis.yml  .~lock.test.csv#  .~lock.test3.csv#  404.html  CNAME  CONTRIBUTING.md  DaiBitcoinPaqueteCentral.md  Dockerfile  Dockerfile.armhf  Dockerfile.develop  Dockerfile.gpu  Dockerfile.pi  Dockerfile.technical  HowToRunMultipleInstances.md  LOCAL.md  MANIFEST.in  Pipfile  README.md  Snippets_Importing_libraries.ipynb  StackingConfig.json  StackingDemo.py  TODO  Vagrantfile  analyze.py  app.js  backtest-result.txt  backtester.sh  codacy.yml  (+96 more)
.dependabot/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Jupyter/: profit_multistrat_plot.ipynb
_429_directory/: M-1646226264.6786098_ROMEO_START_OL,OS  Q-1646226264.9948108_ROMEO_START_OL,OS  U-1646226257.2748682_ROMEO_FINISH_CL,CS
backtest_data/: SOL_minute_Jan_2022.csv  SOL_minute_Nov_2020.csv  SOL_minute_Nov_2021.csv
build_helpers/: TA_Lib-0.4.17-cp37-cp37m-win_amd64.whl  TA_Lib-0.4.17-cp38-cp38-win_amd64.whl  TA_Lib-0.4.18-cp37-cp37m-win_amd64.whl  TA_Lib-0.4.18-cp38-cp38-win_amd64.whl  TA_Lib-0.4.19-cp37-cp37m-win_amd64.whl  TA_Lib-0.4.19-cp38-cp38-win_amd64.whl  TA_Lib-0.4.20-cp37-cp37m-win_amd64.whl  TA_Lib-0.4.20-cp38-cp38-win_amd64.whl  TA_Lib-0.4.21-cp37-cp37m-win_amd64.whl  TA_Lib-0.4.21-cp38-cp38-win_amd64.whl  TA_Lib-0.4.21-cp39-cp39-win_amd64.whl  TA_Lib-0.4.22-cp310-cp310-win_amd64.whl  TA_Lib-0.4.22-cp37-cp37m-win_amd64.whl  TA_Lib-0.4.22-cp38-cp38-win_amd64.whl  TA_Lib-0.4.22-cp39-cp39-win_amd64.whl  TA_Lib-0.4.23-cp310-cp310-win_amd64.whl  TA_Lib-0.4.23-cp37-cp37m-win_amd64.whl  TA_Lib-0.4.23-cp38-cp38-win_amd64.whl  TA_Lib-0.4.23-cp39-cp39-win_amd64.whl  TA_Lib-0.4.24-cp310-cp310-win_amd64.whl  TA_Lib-0.4.24-cp37-cp37m-win_amd64.whl  TA_Lib-0.4.24-cp38-cp38-win_amd64.whl  TA_Lib-0.4.24-cp39-cp39-win_amd64.whl  TA_Lib-0.4.25-cp310-cp310-win_amd64.whl  TA_Lib-0.4.25-cp311-cp311-win_amd64.whl  TA_Lib-0.4.25-cp38-cp38-win_amd64.whl  TA_Lib-0.4.25-cp39-cp39-win_amd64.whl  TA_Lib-0.4.26-cp310-cp310-win_amd64.whl  TA_Lib-0.4.26-cp311-cp311-win_amd64.whl  TA_Lib-0.4.26-cp38-cp38-win_amd64.whl  TA_Lib-0.4.26-cp39-cp39-win_amd64.whl  TA_Lib-0.4.27-cp310-cp310-win_amd64.whl  TA_Lib-0.4.27-cp311-cp311-win_amd64.whl  TA_Lib-0.4.27-cp38-cp38-win_amd64.whl  TA_Lib-0.4.27-cp39-cp39-win_amd64.whl  TA_Lib-0.4.28-cp310-cp310-win_amd64.whl  TA_Lib-0.4.28-cp311-cp311-linux_armv7l.whl  TA_Lib-0.4.28-cp311-cp311-win_amd64.whl  TA_Lib-0.4.28-cp312-cp312-win_amd64.whl  TA_Lib-0.4.28-cp38-cp38-win_amd64.whl  (+39 more)
config_examples/: Strategy002.py  Strategy003.py  Strategy004.py  config_2_json  config_3_json  config_binance.example.json  config_binance_futures.example.json  config_binance_margin.example.json  config_bittrex.example.json  config_follower.example.json  config_freqai-rl.example.json  config_freqai.example.json  config_freqai_futures.example.json  config_freqai_spot.example.json  config_ftx.example.json  config_full.example.json  config_json  config_kraken.example.json  config_kraken_margin.example.json  config_leader.example.json  config_okex.example.json  config_okex_futures.example.json  config_reinforcementlearning_example.json
docker/: Dockerfile.aarch64  Dockerfile.armhf  Dockerfile.custom  Dockerfile.develop  Dockerfile.freqai  Dockerfile.freqai_rl  Dockerfile.jupyter  Dockerfile.nikhil  Dockerfile.plot  Dockerfile.rootless  Dockerfile.technical  docker-compose-freqai.yml  docker-compose-jupyter.yml
docs/: about.md  advanced-backtesting.md  advanced-external-signals.md  advanced-hyperopt.md  advanced-orderflow.md  advanced-setup.md  backtesting.md  bot-basics.md  bot-optimization.md  bot-usage.md  configuration.md  data-analysis.md  data-download.md  deprecated.md  developer.md  docker.md  docker_compose.md  docker_quickstart.md  edge.md  exchanges.md  faq.md  freq-ui.md  freqai-configuration.md  freqai-data-handling.md  freqai-developers.md  freqai-feature-engineering.md  freqai-outlier-detection.md  freqai-parameter-table.md  freqai-reinforcement-learning.md  freqai-running.md  freqai-spice-rack.md  freqai.md  freqtrade-101.md  hyperopt.md  hyperopt_legacy.md  index-2.md  index.md  installation.md  kubernetes_quickstart.md  leverage.md  (+25 more)
en/: index.html  latest  stable  versions.json
freqtrade/: __init__.py  __main__.py  analyze.py  arguments.py  config-backtesting.json  config.json  config.json-bak  configuration.py  constants.py  context.py  custom_orders_strat.py  dataprovider.py  edge.py  exceptions.py  exchange.py  fiat_convert.py  freqtradebot.py  freqtradebot.py.orig  indicator_helpers.py  logger.py  loggers.py  main.py  maintenance_margin.py  migrate.py  misc.py  multithreading.py  persistence.py  state.py  system.py  typing.py  utils.py  wallets.py  watchdog.py  worker.py
freqtrade-strategies-master/: .gitignore  README.md
ft_client/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
ft_client/freqtrade_client/: __init__.py  ft_client.py  ft_rest_client.py
ft_client/test_client/: test_rest_client.py
lib/: libta_lib.la  libta_lib.so.0  libta_lib.so.0.0.0
migrations/: 20171111135341_v2-to-v3.py
parallel/: README.md  backtesting.py  config.json  default_strategy.py  generator.py
powershell_tests/: setup.Tests.ps1
rpc/: telegram.py
scripts/: convert_backtestdata.py  download_backtest_data.py  get_market_pairs.py  openapi.py  plot_dataframe.py  plot_profit.py  pytest.sh  random.py  rest_client.py  start-hyperopt-worker.py  start-hyperopt-worker.sh  start-mongodb.py  start-mongodb.sh  test_ws_client.py  ws_client.py
test/: test_analyze.py  test_backtesting.py  test_main.py  test_persistence.py  test_telegram.py
tests/: config_test_comments.json  config_test_environment.json  conftest.py  conftest_hyperopt.py  conftest_trades.py  conftest_trades_tags.py  conftest_trades_usdt.py  test_docs.sh  (+29 more)
(+4414 files in other folders)
